matnn/longhorn/longhorn-deployment-rwx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-rwx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:plain-text
          ports:
           - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-rwx
